# poroelasticity-dealii

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  domain.geo  domain.msh  fss-poroel.cc  input.data  todo.org
code/: CMakeLists.txt  Makefile  cmake_install.cmake
code/source/: fss-poroel.cc
lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lib/include/: BoundaryConditions.h  ConstitutiveModel.h  InputDataPoroel.h  PoroElasticDisplacementSolver.h  PoroElasticPressureSolver.h  PoroelasticityFSS.h  StrainProjector.h  TensorIndexer.h  parse_command_line.h  right_hand_side.h
lib/source/: right_hand_side.cc
